# GLFW_pro

./: CMakeLists.txt  README.md
CMake/modules/: FindGLFW.cmake
InstallFiles/Include/glad/: glad.h
InstallFiles/lib/: glfw3.lib
exersize1/: CMakeLists.txt  main.cpp
exersize2/: CMakeLists.txt  main.cpp
first/: CMakeLists.txt  glad.c  main.cpp
second/: CMakeLists.txt  main.cpp
